dfir_datalog_core/src/snapshots/dfir_datalog_core__tests__persist@surface_graph.snap
---
source: dfir_datalog_core/src/lib.rs
expression: flat_graph_ref.surface_syntax_string()
---
2v1 = unique :: < 'tick > ();
3v1 = difference :: < 'tick , 'static > ();
4v1 = tee ();
5v1 = defer_tick ();
7v1 = unique :: < 'tick > ();
8v1 = difference :: < 'tick , 'static > ();
9v1 = tee ();
10v1 = defer_tick ();
12v1 = unique :: < 'tick > ();
15v1 = unique :: < 'tick > ();
18v1 = unique :: < 'tick > ();
21v1 = unique :: < 'tick > ();
24v1 = unique :: < 'tick > ();
27v1 = unique :: < 'tick > ();
30v1 = unique :: < 'tick > ();
31v1 = difference :: < 'tick , 'static > ();
32v1 = tee ();
33v1 = defer_tick ();
34v1 = source_stream (ints1);
35v1 = source_stream (ints2);
36v1 = source_stream (ints3);
37v1 = for_each (| v | result . send (v) . unwrap ());
38v1 = for_each (| v | result2 . send (v) . unwrap ());
39v1 = for_each (| v | result3 . send (v) . unwrap ());
40v1 = for_each (| v | result4 . send (v) . unwrap ());
41v1 = join :: < 'static , 'static , dfir_rs :: compiled :: pull :: HalfMultisetJoinState > ();
42v1 = map (| kv : (() , ((_ ,) , (_ ,))) | (kv . 1 . 0 . 0 , kv . 1 . 1 . 0 ,));
43v1 = map (| _v : (_ ,) | (() , (_v . 0 ,)));
44v1 = map (| _v : (_ ,) | (() , (_v . 0 ,)));
45v1 = join :: < 'static , 'tick , dfir_rs :: compiled :: pull :: HalfMultisetJoinState > ();
46v1 = map (| kv : (() , ((_ , _ ,) , (_ ,))) | (kv . 1 . 0 . 0 , kv . 1 . 0 . 1 , kv . 1 . 1 . 0 ,));
47v1 = map (| _v : (_ , _ ,) | (() , (_v . 0 , _v . 1 ,)));
48v1 = map (| _v : (_ ,) | (() , (_v . 0 ,)));
49v1 = map (| row : (_ , _ , _ ,) | ((row . 0 , row . 1 , row . 2 ,) , ()));
50v1 = map (| (g , a) : ((_ , _ , _ ,) , _) | (g . 0 , g . 1 , g . 2 ,));
51v1 = anti_join ();
52v1 = map (| kv : ((_ ,) , ()) | (kv . 0 . 0 ,));
53v1 = persist :: < 'static > ();
54v1 = map (| _v : (_ ,) | ((_v . 0 ,) , ()));
55v1 = persist :: < 'static > ();
56v1 = map (| _v : (_ ,) | (_v . 0 ,));
57v1 = map (| row : (_ ,) | ((row . 0 ,) , ()));
58v1 = map (| (g , a) : ((_ ,) , _) | (g . 0 ,));
59v1 = map (| row : (_ ,) | ((row . 0 ,) , ()));
60v1 = map (| (g , a) : ((_ ,) , _) | (g . 0 ,));
61v1 = persist :: < 'static > ();
62v1 = map (| row : (_ ,) | ((row . 0 ,) , ()));
63v1 = map (| (g , a) : ((_ ,) , _) | (g . 0 ,));
64v1 = map (| row : (_ ,) | ((row . 0 ,) , ()));
65v1 = map (| (g , a) : ((_ ,) , _) | (g . 0 ,));
66v1 = map (| row : (_ ,) | ((row . 0 ,) , ()));
67v1 = map (| (g , a) : ((_ ,) , _) | (g . 0 ,));
68v1 = persist :: < 'static > ();

34v1 -> 2v1;
3v1 -> 4v1;
2v1 -> 3v1;
5v1 -> 3v1;
4v1 -> 5v1;
35v1 -> 7v1;
8v1 -> 9v1;
7v1 -> 8v1;
10v1 -> 8v1;
9v1 -> 10v1;
36v1 -> 12v1;
50v1 -> 15v1;
58v1 -> 18v1;
63v1 -> 21v1;
68v1 -> 24v1;
61v1 -> 27v1;
65v1 -> 30v1;
31v1 -> 32v1;
30v1 -> 31v1;
33v1 -> 31v1;
32v1 -> 33v1;
15v1 -> 37v1;
18v1 -> 38v1;
21v1 -> 39v1;
24v1 -> 40v1;
41v1 -> 42v1;
43v1 -> 41v1;
4v1 -> 43v1;
44v1 -> 41v1;
9v1 -> 44v1;
45v1 -> 46v1;
47v1 -> 45v1;
42v1 -> 47v1;
48v1 -> 45v1;
12v1 -> 48v1;
49v1 -> 50v1;
46v1 -> 49v1;
51v1 -> 52v1;
54v1 -> 51v1;
53v1 -> 54v1;
4v1 -> 53v1;
56v1 -> 51v1;
55v1 -> 56v1;
9v1 -> 55v1;
57v1 -> 58v1;
52v1 -> 57v1;
60v1 -> 61v1;
59v1 -> 60v1;
4v1 -> 59v1;
62v1 -> 63v1;
27v1 -> 62v1;
64v1 -> 65v1;
4v1 -> 64v1;
67v1 -> 68v1;
66v1 -> 67v1;
32v1 -> 66v1;
