dfir_datalog_core/src/snapshots/dfir_datalog_core__tests__send_to_node@surface_graph.snap
---
source: dfir_datalog_core/src/lib.rs
expression: flat_graph_ref.surface_syntax_string()
---
2v1 = unique :: < 'tick > ();
5v1 = unique :: < 'tick > ();
7v1 = source_stream (ints);
8v1 = for_each (| v | result . send (v) . unwrap ());
10v1 = unique :: < 'tick > ();
11v1 = for_each (| (node , data) | async_send_result (node , data));
12v1 = source_stream (async_receive_result);
13v1 = map (| row : (_ , _ ,) | ((row . 0 , row . 1 ,) , ()));
14v1 = map (| (g , a) : ((_ , _ ,) , _) | (g . 0 , g . 1 ,));
15v1 = map (| v : (_ , _ ,) | (v . 1 , (v . 0 ,)));

7v1 -> 2v1;
12v1 -> 5v1;
5v1 -> 8v1;
10v1 -> 11v1;
15v1 -> 10v1;
14v1 -> 15v1;
13v1 -> 14v1;
2v1 -> 13v1;
