dfir_datalog_core/src/snapshots/dfir_datalog_core__tests__simple_filter@surface_graph.snap
---
source: dfir_datalog_core/src/lib.rs
expression: flat_graph_ref.surface_syntax_string()
---
2v1 = unique :: < 'tick > ();
5v1 = unique :: < 'tick > ();
7v1 = source_stream (input);
8v1 = for_each (| v | out . send (v) . unwrap ());
9v1 = filter (| row : & (_ , _ ,) | row . 0 > row . 1 && row . 1 == row . 0);
10v1 = map (| row : (_ , _ ,) | ((row . 0 , row . 1 ,) , ()));
11v1 = map (| (g , a) : ((_ , _ ,) , _) | (g . 0 , g . 1 ,));

7v1 -> 2v1;
11v1 -> 5v1;
5v1 -> 8v1;
2v1 -> 9v1;
10v1 -> 11v1;
9v1 -> 10v1;
