dfir_datalog_core/src/snapshots/dfir_datalog_core__tests__single_column_program@surface_graph.snap
---
source: dfir_datalog_core/src/lib.rs
expression: flat_graph_ref.surface_syntax_string()
---
2v1 = unique :: < 'tick > ();
5v1 = unique :: < 'tick > ();
8v1 = unique :: < 'tick > ();
10v1 = source_stream (in1);
11v1 = source_stream (in2);
12v1 = for_each (| v | out . send (v) . unwrap ());
13v1 = join :: < 'tick , 'tick , dfir_rs :: compiled :: pull :: HalfMultisetJoinState > ();
14v1 = map (| kv : ((_ ,) , (() , ())) | (kv . 0 . 0 ,));
15v1 = map (| _v : (_ ,) | ((_v . 0 ,) , ()));
16v1 = map (| _v : (_ ,) | ((_v . 0 ,) , ()));
17v1 = map (| row : (_ ,) | ((row . 0 ,) , ()));
18v1 = map (| (g , a) : ((_ ,) , _) | (g . 0 ,));

10v1 -> 2v1;
11v1 -> 5v1;
18v1 -> 8v1;
8v1 -> 12v1;
13v1 -> 14v1;
15v1 -> 13v1;
2v1 -> 15v1;
16v1 -> 13v1;
5v1 -> 16v1;
17v1 -> 18v1;
14v1 -> 17v1;
