dfir_datalog_core/src/snapshots/dfir_datalog_core__tests__transitive_closure@surface_graph.snap
---
source: dfir_datalog_core/src/lib.rs
expression: flat_graph_ref.surface_syntax_string()
---
2v1 = unique :: < 'tick > ();
5v1 = unique :: < 'tick > ();
7v1 = union ();
8v1 = unique :: < 'tick > ();
9v1 = tee ();
10v1 = source_stream (edges);
11v1 = source_stream (seed_reachable);
12v1 = for_each (| v | reachable . send (v) . unwrap ());
13v1 = map (| row : (_ ,) | ((row . 0 ,) , ()));
14v1 = map (| (g , a) : ((_ ,) , _) | (g . 0 ,));
15v1 = join :: < 'tick , 'tick , dfir_rs :: compiled :: pull :: HalfMultisetJoinState > ();
16v1 = map (| kv : ((_ ,) , (() , (_ ,))) | (kv . 0 . 0 , kv . 1 . 1 . 0 ,));
17v1 = map (| _v : (_ ,) | ((_v . 0 ,) , ()));
18v1 = map (| _v : (_ , _ ,) | ((_v . 0 ,) , (_v . 1 ,)));
19v1 = map (| row : (_ , _ ,) | ((row . 1 ,) , ()));
20v1 = map (| (g , a) : ((_ ,) , _) | (g . 0 ,));

10v1 -> 2v1;
11v1 -> 5v1;
7v1 -> 8v1;
8v1 -> 9v1;
9v1 -> 12v1;
14v1 -> 7v1;
13v1 -> 14v1;
5v1 -> 13v1;
15v1 -> 16v1;
17v1 -> 15v1;
9v1 -> 17v1;
18v1 -> 15v1;
2v1 -> 18v1;
20v1 -> 7v1;
19v1 -> 20v1;
16v1 -> 19v1;
