dfir_datalog_core/src/snapshots/dfir_datalog_core__tests__wildcard_fields@surface_graph.snap
---
source: dfir_datalog_core/src/lib.rs
expression: flat_graph_ref.surface_syntax_string()
---
2v1 = unique :: < 'tick > ();
3v1 = tee ();
5v1 = unique :: < 'tick > ();
7v1 = source_stream (input);
8v1 = for_each (| v | out . send (v) . unwrap ());
9v1 = join :: < 'tick , 'tick , dfir_rs :: compiled :: pull :: HalfMultisetJoinState > ();
10v1 = map (| kv : ((_ ,) , ((_ ,) , (_ ,))) | (kv . 0 . 0 , kv . 1 . 0 . 0 , kv . 1 . 1 . 0 ,));
11v1 = map (| _v : (_ , _ ,) | ((_v . 0 ,) , (_v . 1 ,)));
12v1 = map (| _v : (_ , _ ,) | ((_v . 1 ,) , (_v . 0 ,)));
13v1 = map (| row : (_ , _ , _ ,) | ((row . 0 ,) , ()));
14v1 = map (| (g , a) : ((_ ,) , _) | (g . 0 ,));

7v1 -> 2v1;
2v1 -> 3v1;
14v1 -> 5v1;
5v1 -> 8v1;
9v1 -> 10v1;
11v1 -> 9v1;
3v1 -> 11v1;
12v1 -> 9v1;
3v1 -> 12v1;
13v1 -> 14v1;
10v1 -> 13v1;
